--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
         
     </header>
     <main>
